----------------------------------------------------------------------
 OmegaT 2.2.3 update 3
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   3 Localisation updates
----------------------------------------------------------------------
2.2.3 update 3 vs. 2.2.3 update 2

  Bug fixes:

  - Android filter: the aspostrophe (') character was not escaped properly
with a preceding \

  Localisation updates:

  - Italian localisation updated to 2.2.3 update 2 (UI, manual)
  - Czech localisation updated to 2.2.3 update 2 (UI, documentation, readme)
  - Brazilian Portuguese  localisation updated to 2.2.3 update 2 (UI, Instant Start, readme)

----------------------------------------------------------------------
 OmegaT 2.2.3 update 2
----------------------------------------------------------------------
   2 Enhancements
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
2.2.3 update 2 vs. 2.2.3 update 1

  Implemented requests:

  - Do not show "space" in empty segments
  http://sourceforge.net/support/tracker.php?aid=2169106

  Other enhancements:

  - Remove start of segment marker, and move segment number at the end of
segment

  - Give a specific title to the file chooser dialog in the Spellchecker
dialog (it was just "Open")

  Bug fixes:

  - In the File Filter options, one of the filename configuration
variable was wrongly spelt: ${targetCoutryCode} instead of 
${targetCountryCode}. Configurations with the old variable name will
still work.

  Localisation updates:

  - Dutch localisation updated to 2.2.3 (UI)

----------------------------------------------------------------------
 OmegaT 2.2.3 update 1
----------------------------------------------------------------------
   3 Enhancements
   5 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.2.3 update 1 vs. 2.2.3

  Implemented requests:
